# portfolio

./: .env.example  .gitignore  Dockerfile  Procfile  README.md  build.sh  fly.toml  manage.py  pyproject.toml  sdf.md
apps/contact/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/contact/migrations/: 0001_initial.py
apps/core/: admin.py  apps.py  context_processors.py  models.py  views.py
apps/core/migrations/: 0001_initial.py  0002_sociallink.py  0003_remove_profile_name_profiletranslation_name.py
apps/portfolio/: admin.py  apps.py  models.py  urls.py  views.py
apps/portfolio/migrations/: 0001_initial.py
apps/resume/: admin.py  apps.py  models.py  urls.py  views.py
apps/resume/migrations/: 0001_initial.py  0002_educationtranslation_location_and_more.py  0003_educationtranslation_field_of_study.py  0004_alter_skill_level.py
config/: jinja2.py  settings.py  urls.py  wsgi.py
config/settings/: base.py  development.py  production.py
templates/: base.html
templates/components/: footer.html  language_switcher.html  navbar.html  social_links.html  theme_init.html  theme_toggle.html
templates/contact/: contact.html
templates/core/: home.html
templates/portfolio/: project_detail.html  project_list.html
templates/resume/: resume.html
theme/static/js/: navbar.js  theme.js
theme/static_src/: package-lock.json  package.json
theme/static_src/src/: styles.css
