[project]
name = "portfolio"
version = "0.1.0"
description = ""
authors = [
    {name = "Faramarz",email = "faramarzmonfared@gmail.com"}
]
requires-python = "^3.12"
dependencies = [
    "django (>=6.0.6,<7.0.0)",
    "django-jinja (>=2.11.0,<3.0.0)",
    "django-tailwind (>=4.5.0,<5.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
